[project]
name = "portia-pm-agent"
version = "0.1.0"
description = "AI agent for project managers to generate task breakdowns"
requires-python = ">=3.10"

dependencies = [
    "portia-sdk-python",   # Portia Python SDK (used by the scripts)
    "python-dotenv",       # load .env env vars
]

[tool.uv]
# optional, allows uv to know your entrypoint
scripts = { start = "python main.py" }
